@@ -61,7 +61,8 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;stderr_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
 ;stderr_logfile_backups=10     ; # of stderr logfile backups (default 10)
 ;stderr_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
-;environment=A=1,B=2           ; process environment additions
+;environment=A=1,B=2           ; process environment additions (def no adds)
+;directory=/tmp                ; directory to cwd to before exec (def no cwd)
 
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
